modificaciones cargadas